--- a/thesis/preamble.sty
+++ b/thesis/preamble.sty
@@ -48,7 +48,8 @@
 % entity
 \newcommand{\entity}{\textit{entity (Q35120)}}
 
-\theoremstyle{plain}
+\theoremstyle{definition}
 \newtheorem{definition}{Definition}
 \newtheorem*{definition*}{Definition}
+\newtheorem{algorithm}{Algorithm}
 
