--- a/thesis/thesis.ltx
+++ b/thesis/thesis.ltx
@@ -34,8 +34,8 @@
 
 \pagenumbering{arabic}
 
-\section{Introduction}
-\import{./}{introduction.ltx}
+\section{Introduction}\label{section:introduction}
+%\import{./}{introduction.ltx}
 
 \section{Foundations}
 \import{./}{foundations.ltx}
@@ -51,7 +51,7 @@ General concepts. Classification of considered problem in the task of ontology l
 \fullcite{Petrucci16}\\
 \fullcite{Fu2014}\\
 
-\section{Neural networks}
+\section{Neural networks}\label{section:neural networks}
 Notion of neural networks will be introduced.
 
 \subsection{Recursive neural networks for graph representation}
