Fixes. Added introduction.ltx

--- a/thesis/foundations.ltx
+++ b/thesis/foundations.ltx
@@ -301,7 +301,7 @@ all training samples. Additional knowledge about the structure or content of the
 \begin{algorithm}[weighted kNN]
 Let $O$ be a specific set of objects, e.g. $\mathbb{R}^n$, with a similarity measure $\mathit{sim}$.
 Let $n \in mathbb{N}$ be the number of labels. 
-Let $T = \{\(o_i, l_i)\}$ with $i=0,\dots,m-1$ and be the set of training samples with $m$ samples, where $o_i \in O$
+Let $T = \{(o_i, l_i)\}$ with $i=0,\dots,m-1$ and be the set of training samples with $m$ samples, where $o_i \in O$
 is an object and $l_i \in [0, n-1]$ is its corresponding class.
 Let $u \in O$ be an unclassified object.
 \textbf{TODO: insert missing definitions}
