--- a/thesis/bibliography.bib
+++ b/thesis/bibliography.bib
@@ -8,7 +8,7 @@
   journal   = {CoRR},
   volume    = {abs/1301.3781},
   year      = {2013},
-  url       = {\url{http://arxiv.org/abs/1301.3781}},
+  url       = {http://arxiv.org/abs/1301.3781},
   timestamp = {Thu, 07 May 2015 20:02:01 +0200},
   biburl    = {http://dblp.uni-trier.de/rec/bib/journals/corr/abs-1301-3781},
   bibsource = {dblp computer science bibliography, http://dblp.org}
@@ -23,7 +23,7 @@
 	keywords = {},
 	abstract = {Recent trends suggest that neural-network-inspired word embedding models outperform traditional count-based distributional models on word similarity and analogy detection tasks. We reveal that much of the performance gains of word embeddings are due to certain system design choices and hyperparameter optimizations, rather than the embedding algorithms themselves. Furthermore, we show that these modifications can be transferred to traditional distributional models, yielding similar gains. In contrast to prior reports, we observe mostly local or insignificant performance differences between the methods, with no global advantage to any single approach over the others.},
 	issn = {2307-387X},
-	url = {\url{https://transacl.org/ojs/index.php/tacl/article/view/570}},
+	url = {https://transacl.org/ojs/index.php/tacl/article/view/570},
 	pages = {211--225}
 }
 % explanation for skip-gram model
@@ -35,7 +35,7 @@
   journal   = {CoRR},
   volume    = {abs/1402.3722},
   year      = {2014},
-  url       = {\url{http://arxiv.org/abs/1402.3722}},
+  url       = {http://arxiv.org/abs/1402.3722},
   timestamp = {Wed, 05 Mar 2014 14:43:44 +0100},
   biburl    = {http://dblp.uni-trier.de/rec/bib/journals/corr/GoldbergL14},
   bibsource = {dblp computer science bibliography, http://dblp.org}
@@ -54,10 +54,10 @@
 @inproceedings{Cao2016,
   added-at = {2016-04-21T00:00:00.000+0200},
   author = {Cao, Shaosheng and Lu, Wei and Xu, Qiongkai},
-  biburl = {\url{http://www.bibsonomy.org/bibtex/2fe0553a0f56deb89f08675922c74c693/dblp}},
+  biburl = {http://www.bibsonomy.org/bibtex/2fe0553a0f56deb89f08675922c74c693/dblp},
   booktitle = {AAAI},
   editor = {Schuurmans, Dale and Wellman, Michael P.},
-  ee = {\url{http://www.aaai.org/ocs/index.php/AAAI/AAAI16/paper/view/12423}},
+  ee = {http://www.aaai.org/ocs/index.php/AAAI/AAAI16/paper/view/12423},
   interhash = {8d446898df77367778ed6deca96e68b8},
   intrahash = {fe0553a0f56deb89f08675922c74c693},
   keywords = {dblp},
@@ -80,7 +80,7 @@ archivePrefix = "arXiv",
  keywords = {Statistics - Machine Learning, Computer Science - Artificial Intelligence, Computer Science - Learning},
      year = 2016,
     month = jun,
-   adsurl = {\url{http://adsabs.harvard.edu/abs/2016arXiv160605336R}},
+   adsurl = {http://adsabs.harvard.edu/abs/2016arXiv160605336R},
   adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
 % recursive neural network
@@ -93,7 +93,7 @@ month = {jan},
 number = {1},
 pages = {61--80},
 title = {{The Graph Neural Network Model}},
-url = {\url{http://ieeexplore.ieee.org/document/4700287/}},
+url = {http://ieeexplore.ieee.org/document/4700287/},
 volume = {20},
 year = {2009}
 }
@@ -111,7 +111,7 @@ year = {2009}
  pages = {20:1--20:36},
  articleno = {20},
  numpages = {36},
- url = {\url{http://doi.acm.org/10.1145/2333112.2333115}},
+ url = {http://doi.acm.org/10.1145/2333112.2333115},
  doi = {10.1145/2333112.2333115},
  acmid = {2333115},
  publisher = {ACM},
@@ -155,7 +155,7 @@ We present a generic architecture for ontology learning systems and discuss its 
   keywords = {dblp},
   pages = {333-338},
   publisher = {ACM},
-  timestamp = {\url{2016-06-07T11:38:58.000+0200}},
+  timestamp = {2016-06-07T11:38:58.000+0200},
   title = {Ontology enrichment by discovering multi-relational association rules from ontological knowledge bases.},
   url = {http://dblp.uni-trier.de/db/conf/sac/sac2016.html\#dAmatoSTMG16},
   year = 2016
@@ -185,7 +185,7 @@ year = {2016}
   journal   = {CoRR},
   volume    = {abs/1607.04110},
   year      = {2016},
-  url       = {\url{http://arxiv.org/abs/1607.04110}},
+  url       = {http://arxiv.org/abs/1607.04110},
   timestamp = {Tue, 02 Aug 2016 12:59:27 +0200},
   biburl    = {http://dblp.uni-trier.de/rec/bib/journals/corr/PetrucciGR16},
   bibsource = {dblp computer science bibliography, http://dblp.org}
@@ -214,7 +214,7 @@ year = {2011}
  location = {Honolulu, Hawaii, USA},
  pages = {662--673},
  numpages = {12},
- url = {\url{http://doi.acm.org/10.1145/511446.511532}},
+ url = {http://doi.acm.org/10.1145/511446.511532},
  doi = {10.1145/511446.511532},
  acmid = {511532},
  publisher = {ACM},
@@ -244,7 +244,7 @@ year = {2014}
  isbn = {1-55860-556-8},
  pages = {296--304},
  numpages = {9},
- url = {\url{http://dl.acm.org/citation.cfm?id=645527.657297}},
+ url = {http://dl.acm.org/citation.cfm?id=645527.657297},
  acmid = {657297},
  publisher = {Morgan Kaufmann Publishers Inc.},
  address = {San Francisco, CA, USA},
@@ -272,7 +272,7 @@ year = {2000}
  issn = {1041-4347},
  pages = {442--456},
  numpages = {15},
- url = {\url{http://dx.doi.org/10.1109/TKDE.2003.1185844}},
+ url = {http://dx.doi.org/10.1109/TKDE.2003.1185844},
  doi = {10.1109/TKDE.2003.1185844},
  acmid = {642948},
  publisher = {IEEE Educational Activities Department},
@@ -290,7 +290,7 @@ year = {2000}
     posted-at = {2011-03-21 06:26:51},
     priority = {2},
     title = {{A k-Nearest Neighbor Based Algorithm for Multi-label Classification}},
-    url = {\url{http://ieeexplore.ieee.org/xpls/abs\_all.jsp?arnumber=1547385}},
+    url = {http://ieeexplore.ieee.org/xpls/abs\_all.jsp?arnumber=1547385},
     volume = {2},
     year = {2005}
 }
@@ -306,7 +306,7 @@ year = {2000}
  issn = {1532-4435},
  pages = {747--776},
  numpages = {30},
- url = {\url{http://dl.acm.org/citation.cfm?id=1577069.1577096}},
+ url = {http://dl.acm.org/citation.cfm?id=1577069.1577096},
  acmid = {1577096},
  publisher = {JMLR.org},
 } 
@@ -321,7 +321,7 @@ year = {2000}
  location = {Athens, GA},
  pages = {228--241},
  numpages = {14},
- url = {\url{http://dx.doi.org/10.1007/11926078_17}},
+ url = {http://dx.doi.org/10.1007/11926078_17},
  doi = {10.1007/11926078_17},
  acmid = {2127063},
  publisher = {Springer-Verlag},
@@ -338,24 +338,24 @@ year = {2014}
 % wikidata subclass of documentation
 @misc{WikidataP279,
 title={Property talk:P279},
-howpublished={\url{https://www.wikidata.org/wiki/Property_talk:P279}}
+howpublished={https://www.wikidata.org/wiki/Property\_talk:P279}
 note={Accessed: 2017-01-29}
 }
 % wikidata entity talk
 @misc{WikidataQ35120,
 title={Talk:Q35120},
-howpublished={\url{https://www.wikidata.org/wiki/Talk:Q35120}},
+howpublished={https://www.wikidata.org/wiki/Talk:Q35120},
 note={Accessed: 2017-01-29}
 }
 % wikidata project chat about subclass tree
 @misc{WikidataSubclassTree,
 title={Wikidata project chat: Top of the subclass tree},
-howpublished={\url{https://www.wikidata.org/w/index.php?title=Wikidata:Project_chat&oldid=91040961#Top_of_the_subclass_tree}},
+howpublished={https://www.wikidata.org/w/index.php?title=Wikidata:Project_chat\&oldid=91040961\#Top\_of\_the\_subclass\_tree},
 note={Accessed: 2017-01-30}
 }
 % wikidata new item
 @misc{WikidataNewItem,
 title={Wikidata: Create a new item},
-howpublished={\url{https://www.wikidata.org/wiki/Special:NewItem}},
+howpublished={https://www.wikidata.org/wiki/Special:NewItem},
 note={Accessed: 2017-02-05}
 }
