--- a/thesis/thesis.ltx
+++ b/thesis/thesis.ltx
@@ -35,7 +35,7 @@
 \pagenumbering{arabic}
 
 \section{Introduction}\label{section:introduction}
-%\import{./}{introduction.ltx}
+\import{./}{introduction.ltx}
 
 \section{Foundations}
 \import{./}{foundations.ltx}
