--- a/thesis/thesis.ltx
+++ b/thesis/thesis.ltx
@@ -90,7 +90,13 @@ e.g. Wikipedia
 
 \subsection{Results}
 
-
 \bibliographystyle{plainnat}
 \bibliography{bibliography}
+
+\appendix
+\section*{Appendices}
+
+\section{Appendix: Graphs}\label{section:graphs}
+\import{./}{appendix_graphs.ltx}
+
 \end{document}
