--- a/thesis/bibliography.bib
+++ b/thesis/bibliography.bib
@@ -92,7 +92,7 @@ journal = {IEEE Transactions on Neural Networks},
 month = {jan},
 number = {1},
 pages = {61--80},
-title = {{The Graph Neural Network Model}},
+title = {The Graph Neural Network Model},
 url = {http://ieeexplore.ieee.org/document/4700287/},
 volume = {20},
 year = {2009}
