--- a/thesis/introduction.ltx
+++ b/thesis/introduction.ltx
@@ -1,1 +1,17 @@
 \textbf{TODO: Motivation. Related work. Solution. Evaluation.}
+
+The thesis is structured as follows.
+Section~\ref{section:foundations} defines the concepts related to Wikidata, taxonomies, similarity measures
+and k-nearest-neighbors classification. Subsequently, the problem statement is formalized and its corresponding
+challenges listed.
+Section~\ref{section:taxonomy analysis} presents the results of the analysis of Wikidata's taxonomy.
+Characteristics of unlinked classes are identified, and a specific subset of unlinked classes chosen,
+which fulfills necessary requirements as input for an algorithm.
+Section~\ref{section:ontology learning} compares the problem, solved by the thesis, to related work
+in the field of ontology learning. The problem is classified and solutions to similar problems analyzed.
+The novelty of the work is justified.\textbf{TODO: maybe reformulate the last sentence?}
+Section~\ref{section:neural networks}.
+Section~\ref{section:algorithm}.
+Section~\ref{section:evaluation}.
+Section~\ref{section:conclusion}.
+
