--- a/thesis/thesis.ltx
+++ b/thesis/thesis.ltx
@@ -37,13 +37,13 @@
 \section{Introduction}\label{section:introduction}
 \import{./}{introduction.ltx}
 
-\section{Foundations}
+\section{Foundations}\label{section:foundations}
 \import{./}{foundations.ltx}
 
 \section{Analysis of the Wikidata taxonomy}\label{section:taxonomy analysis}
 \import{./}{taxonomy_analysis.ltx}
 
-\section{Ontology learning}
+\section{Ontology learning}\label{section:ontology learning}
 General concepts. Classification of considered problem in the task of ontology learning. Related work.\\
 \fullcite{Cimiano2009}\\
 \fullcite{Wong2012}\\
@@ -70,7 +70,7 @@ and the input classes are not part of that component.
 
 \subsection{Comparison}
 
-\section{Algorithm}
+\section{Algorithm}\label{section:algorithm}
 
 \subsection{Baseline}
 \begin{itemize}
@@ -81,7 +81,7 @@ and the input classes are not part of that component.
 \subsection{Supplementing with other resources}
 e.g. Wikipedia
 
-\section{Evaluation}
+\section{Evaluation}\label{section:evaluation}
 
 \subsection{Method}
 \citeauthor{Dellschaft2006} \cite{Dellschaft2006}
@@ -89,6 +89,8 @@ e.g. Wikipedia
 \subsection{Generation of gold standard}
 
 \subsection{Results}
+
+\section{Conclusion and future work}\label{section:conclusion}
 
 \bibliographystyle{plainnat}
 \bibliography{bibliography}
