Finished overview of sections in Introduction.

--- a/thesis/bibliography.bib
+++ b/thesis/bibliography.bib
@@ -338,7 +338,7 @@ year = {2014}
 % wikidata subclass of documentation
 @misc{WikidataP279,
 title={Property talk:P279},
-howpublished={https://www.wikidata.org/wiki/Property\_talk:P279}
+howpublished={https://www.wikidata.org/wiki/Property\_talk:P279},
 note={Accessed: 2017-01-29}
 }
 % wikidata entity talk
