--- a/thesis/thesis.ltx
+++ b/thesis/thesis.ltx
@@ -44,12 +44,7 @@
 \import{./}{taxonomy_analysis.ltx}
 
 \section{Ontology learning}\label{section:ontology learning}
-General concepts. Classification of considered problem in the task of ontology learning. Related work.\\
-\fullcite{Cimiano2009}\\
-\fullcite{Wong2012}\\
-\fullcite{dAmato16}\\
-\fullcite{Petrucci16}\\
-\fullcite{Fu2014}\\
+\import{./}{ontology_learning.ltx}
 
 \section{Neural networks}\label{section:neural networks}
 Notion of neural networks will be introduced.
