--- a/thesis/introduction.ltx
+++ b/thesis/introduction.ltx
@@ -1,4 +1,4 @@
-\textbf{TODO: Motivation. Related work. Solution. Evaluation.}
+\textbf{TODO: Motivation.  Related work. Justify novelty. Solution. Evaluation.}
 
 The thesis is structured as follows.
 Section~\ref{section:foundations} defines the concepts related to Wikidata, taxonomies, similarity measures
@@ -9,9 +9,17 @@ Characteristics of unlinked classes are identified, and a specific subset of unl
 which fulfills necessary requirements as input for an algorithm.
 Section~\ref{section:ontology learning} compares the problem, solved by the thesis, to related work
 in the field of ontology learning. The problem is classified and solutions to similar problems analyzed.
-The novelty of the work is justified.\textbf{TODO: maybe reformulate the last sentence?}
-Section~\ref{section:neural networks}.
-Section~\ref{section:algorithm}.
-Section~\ref{section:evaluation}.
-Section~\ref{section:conclusion}.
+The novelty of the work is justified.
+Section~\ref{section:neural networks} explains the notion of neural networks at
+the example of a simple feedforward network with backpropagation.
+Subsequently, neural networks for graph and word representation are compared
+in regards to suitability in the problem's context.
+Section~\ref{section:algorithm} describes the developed baseline algorithm, which combines
+Word2Vec by \fullcite{Mikolov2013} and k-nearest-neighbors.
+Possible variations of the algorithm are presented and compared in regards to possible gains and problems. 
+One of these variations is also implemented for evaluation purposes.
+Section~\ref{section:evaluation} describes the evaluation methodology and presents the results.
+The baseline algorithm, using multiple different sets of different hyperparameters,  and a variation of it will be compared.
+Section~\ref{section:conclusion} summarizes the results of the thesis and lists possible future work,
+which could extend upon it.
 
