Added Ontology learning/Approaches for learning taxonomic relations.

--- a/thesis/bibliography.bib
+++ b/thesis/bibliography.bib
@@ -169,6 +169,33 @@ We present a generic architecture for ontology learning systems and discuss its 
  publisher = {Springer-Verlag New York, Inc.},
  address = {Secaucus, NJ, USA},
 } 
+% ontology learning for the semantic web
+@article{Maedche2001,
+ author = {Maedche, Alexander and Staab, Steffen},
+ title = {Ontology Learning for the Semantic Web},
+ journal = {IEEE Intelligent Systems},
+ issue_date = {March 2001},
+ volume = {16},
+ number = {2},
+ month = mar,
+ year = {2001},
+ issn = {1541-1672},
+ pages = {72--79},
+ numpages = {8},
+ url = {http://dx.doi.org/10.1109/5254.920602},
+ doi = {10.1109/5254.920602},
+ acmid = {630627},
+ publisher = {IEEE Educational Activities Department},
+ address = {Piscataway, NJ, USA},
+}
+% taxonomy learning - classification based approach
+@Inproceedings{Pekar2002,
+	booktitle = {Proceedings of the 19th Conference on Computational Linguistics, COLING-2002, August 24 - September 1, 2002 , Taipei, Taiwan, 2002},
+	title = {Taxonomy Learning - Factoring the structure of a taxonomy into a semantic classification decision},
+	year = {2002},
+	type = {Inproceedings},
+	author = {Viktor Pekar and Steffen Staab},
+}
 % rule learning ontology
 @phdthesis{Galarraga2016,
 author = {Gal{\'{a}}rraga, Luis},
@@ -176,6 +203,22 @@ school = {Telecom ParisTech},
 title = {{Rule Mining in Knowledge Bases}},
 year = {2016}
 }
+% 
+@article{Cimiano2005,
+abstract = {We present a novel approach to the automatic acquisition of taxonomies or concept hierarchies from a text corpus. The approach is based on Formal Concept Analysis (FCA), a method mainly used for the analysis of data, i.e. for investigating and processing explicitly given information. We follow Harris' distributional hypothesis and model the context of a certain term as a vector repre-senting syntactic dependencies which are automatically acquired from the text corpus with a lin-guistic parser. On the basis of this context information, FCA produces a lattice that we convert into a special kind of partial order constituting a concept hierarchy. The approach is evaluated by com-paring the resulting concept hierarchies with hand-crafted taxonomies for two domains: tourism and finance. We also directly compare our approach with hierarchical agglomerative clustering as well as with Bi-Section-KMeans as an instance of a divisive clustering algorithm. Furthermore, we investigate the impact of using different measures weighting the contribution of each attribute as well as of applying a particular smoothing technique to cope with data sparseness.},
+archivePrefix = {arXiv},
+arxivId = {1109.2140},
+author = {Cimiano, Philipp and Hotho, Andreas and Staab, Steffen},
+doi = {10.1.1.60.228},
+eprint = {1109.2140},
+issn = {10769757},
+journal = {Journal of Artificial Intelligence Research},
+pages = {305--339},
+title = {{Learning Concept Hierarchies from Text Corpora using Formal Concept Analysis}},
+volume = {24},
+year = {2005}
+}
+
 % neural network for ontology learning
 @article{Petrucci16,
   author    = {Giulio Petrucci and
